<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="ad_interstitial">ca-app-pub-1787543515295865/</string>
    <string name="app_name" translatable="false">MyRoutes</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="subtitle">Draw Routes on Maps</string>
    <string name="distance">Distance</string>
    <string name="viewmode">VIEW MODE</string>
    <string name="network_unavailable">Network is unavailable</string>
    <string name="path_start_point">Path is back at starting point</string>
    <string name="path_user_point">Path is connected to your current location</string>
    <string name="selected_file_unsharable">The selected file cannot be shared</string>
    <string name="no_path_to_share">No path to share</string>
    <string name="snap_to_road_off">Snap to road is off</string>
    <string name="snap_to_road_on">Snap to road is on</string>
    <string name="no_gpx_file">This is not a GPX file</string>
    <string name="no_mbtiles_file">This is not a MBTiles file</string>
    <string name="no_routes_saved">No routes saved</string>
    <string name="quit_application">Quit Application</string>
    <string name="confirm_quit_application">Are you sure you want to quit?</string>
    <string name="delete_route">Delete Route</string>
    <string name="confirm_delete_route">Are you sure you want to delete this route?</string>
    <string name="save_route">Save Route</string>
    <string name="name_your_route">Name your route</string>
    <string name="no_points_to_save">No points to save</string>
    <string name="routename_too_short">Route name is too short</string>
    <string name="clear_map">Clear map</string>
    <string name="confirm_remove_path">Are you sure you want to remove all points from the map?</string>
    <string name="route_saved">Route saved</string>
    <string name="routes_saved">routes saved</string>
    <string name="does_not_exist">does not exist</string>
    <string name="is_imported">is imported</string>
    <string name="is_saved">is saved</string>
    <string name="is_deleted">is deleted</string>
    <string name="property_routes">Routes</string>
    <string name="property_actions">Actions</string>
    <string name="property_other">Other</string>
    <string name="action_import_gpx">Import GPX</string>
    <string name="action_share_gpx">Share GPX</string>
    <string name="action_share_online_link">Share Online Link</string>
    <string name="action_offline">Offline Maps</string>
    <string name="action_settings">Settings</string>
    <string name="action_changelog">Changelog</string>
    <string name="action_about">About</string>
    <string name="action_share">Share App</string>
    <string name="action_delete">Delete Route</string>
    <string name="action_save">Save</string>
    <string name="action_stop_import_mode">Stop View Mode</string>
    <string name="action_clear">Clear All</string>
    <string name="action_last_marker">Go To Last Marker</string>
    <string name="action_start_marker">Start From Marker</string>
    <string name="action_snap_road">Snap To Road</string>
    <string name="action_upload">Upload Route to MyRoutes.io</string>
    <string name="upload_to_server">Upload route to server</string>
    <string name="upload_generate_link">Generate unique link to your route.</string>
    <string name="make_private">Private Route</string>
    <string name="action_no_points">No points to use</string>
    <string name="action_no_points_save">No points to save</string>
    <string name="action_no_points_upload">No points to upload</string>
    <string name="play_store_link" translatable="false">https://play.google.com/store/apps/details?id=com.myroutes</string>
    <string name="category_settings">Interface Settings</string>
    <string name="checkbox_toolbar_transparent_title">Transparent Toolbar</string>
    <string name="checkbox_toolbar_transparent_summary">Allow see through toolbar in homescreen</string>
    <string name="category_map">Map Settings</string>
    <string name="quality_high">High (True color png)</string>
    <string name="quality_medium">Medium</string>
    <string name="quality_low">Low (Compressed JPG)</string>
    <string name="unit_metric">Metric</string>
    <string name="unit_imperial">Imperial</string>
    <string name="unit_title">Unit Of Measurement</string>
    <string-array name="unit_titles" translatable="false">
        <item>@string/unit_metric</item>
        <item>@string/unit_imperial</item>
    </string-array>
    <string-array name="unit_values" translatable="false">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="category_markers">Markers</string>
    <string name="checkbox_show_distance_markers">Places markers on set interval on near the track</string>
    <string name="checkbox_show_distance_markers_title">Show Distance Markers</string>
    <string name="maptype_title">Tileset</string>
    <string-array name="maptype_titles" translatable="false">
        <item>Google Maps Default</item>
        <item>Google Maps Satellite</item>
        <item>Google Maps Hybrid</item>
        <item>OpenStreet</item>
        <item>OpenTopo</item>
        <item>OpenCycle</item>
        <item>Lyrk</item>
        <item>MapBox</item>
    </string-array>
    <string-array name="maptype_values" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    <string name="setting_minzoom">Minimum Zoom Level</string>
    <string-array name="setting_min_values" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
    </string-array>
    <string name="setting_maxzoom">Maximum Zoom Level</string>
    <string-array name="setting_max_values" translatable="false">
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
    </string-array>
    <string name="category_mapbox">MapBox Settings</string>
    <string name="mapbox_type_title">Style of Tiles</string>
    <string-array name="mapbox_titles" translatable="false">
        <item>Light</item>
        <item>Dark</item>
        <item>Streets</item>
        <item>Streets Satellite</item>
        <item>Comic</item>
        <item>Outdoors</item>
        <item>Run-Bike-Hike</item>
        <item>Pencil</item>
        <item>Pirates</item>
        <item>Emerald</item>
        <item>High Contrast</item>
    </string-array>
    <string-array name="mapbox_values" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string name="mapbox_quality_title">Quality</string>
    <string-array name="mapbox_quality_titles">
        <item>@string/quality_high</item>
        <item>@string/quality_medium</item>
        <item>@string/quality_low</item>
    </string-array>
    <string-array name="mapbox_quality_values" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="action_enable">Enable</string>
    <string name="action_start_navigation">Start Navigation</string>
    <string-array name="routetypes" translatable="false">
        <item>@string/walking</item>
        <item>@string/running</item>
        <item>@string/cycling</item>
        <item>@string/driving</item>
    </string-array>
    <string-array name="routetypesvalues" translatable="false">
        <item>walking</item>
        <item>running</item>
        <item>cycling</item>
        <item>driving</item>
    </string-array>
    <string name="walking">Walking</string>
    <string name="running">Running</string>
    <string name="cycling">Cycling</string>
    <string name="driving">Driving</string>
    <string-array name="routesettingtypes" translatable="false">
        <item>@string/none</item>
        <item>@string/training</item>
        <item>@string/race</item>
    </string-array>
    <string-array name="routesettingvalues" translatable="false">
        <item>none</item>
        <item>training</item>
        <item>race</item>
    </string-array>
    <string name="none">None</string>
    <string name="training">Training</string>
    <string name="race">Race</string>
    <string name="overwrite_route">Overwrite Route</string>
    <string name="action_silhouette">Create Silhouette</string>
    <string name="action_website">Visit Website</string>
    <string name="action_search_place">Search For Place</string>
    <string name="colorpicker_line_summary">Color of the path</string>
    <string name="colorpicker_line_title">Track Color</string>
    <string name="action_write_review">Write Review</string>
    <string name="title_activity_login">Sign in</string>
    <string-array name="donation_google_catalog_values" translatable="false">
        <item>1 Euro</item>
        <item>2 Euros</item>
        <item>5 Euros</item>
        <item>10 Euros</item>
        <item>20 Euros</item>
        <item>50 Euros</item>
    </string-array>
    <string name="donation_paypal_item">Donation</string>
    <string name="action_donate">Donate</string>
    <string name="generate_offline_map_mobac_instruction">Using Mobile Atlas Creator (MOBAC), you can generate your own offline map and import it here.</string>
    <string name="select_mbtiles_instruction">Select the map data (.mbtiles) by clicking the button below and enable the checkbox in the toolbar.</string>
    <string name="selection_mbtiles_file">Select MBTiles File</string>
    <string name="route_name">Name</string>
    <string name="route_type">Type</string>
    <string name="route_setting">Setting</string>
    <string name="route_description">Description</string>
    <string name="route_upload">Upload Route</string>
    <string name="uploading">Uploading...</string>
    <string name="route_update">Update Route</string>
    <string name="upload_no_response">No response from server</string>
    <string name="upload_name_too_short">Name is too short</string>
    <string name="upload_name_too_long">Name is too long</string>
    <string name="pick_image">Pick image</string>
    <string name="share_silhouette">Share Silhouette</string>
    <string name="thanks_for_using">Thank you for using</string>
    <string name="rate_play_store">"Would you like to write a review in the Play Store?</string>
    <string name="rate_app">Rate App</string>
    <string name="link_copied">Link Copied</string>
    <string name="route_available_web_address">Your route is available at the following web address</string>
    <string name="created_with_myroutes">Created with MyRoutes for Android</string>
    <string name="action_feedback">Feedback</string>
    <string name="title_activity_forgot">Forgot Password</string>
    <string name="prompt_email">Email address</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_out_short">Sign out</string>
    <string name="action_signed_out">Signed out</string>
    <string name="reset_password">Reset Password</string>
    <string name="return_signup">Return to signup</string>
</resources>