<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/category_settings"
        android:key="key_category_settings">
        <SwitchPreference
            android:defaultValue="false"
            android:key="-toolbar_transparency-"
            android:summary="@string/checkbox_toolbar_transparent_summary"
            android:title="@string/checkbox_toolbar_transparent_title"/>

        <com.jrummyapps.android.colorpicker.ColorPreference
            android:defaultValue="@color/colorPrimary"
            android:key="-color_line-"
            android:summary="@string/colorpicker_line_summary"
            android:title="@string/colorpicker_line_title"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/category_markers"
        android:key="key_category_map">
        <SwitchPreference
            android:defaultValue="false"
            android:key="-showdistancemarkers-"
            android:summary="@string/checkbox_show_distance_markers"
            android:title="@string/checkbox_show_distance_markers_title"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/category_map"
        android:key="key_category_map">
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/unit_titles"
            android:entryValues="@array/unit_values"
            android:key="-unit-"
            android:summary="@string/unit_title"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/unit_title"/>
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/setting_min_values"
            android:entryValues="@array/setting_min_values"
            android:key="-minzoom-"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/setting_minzoom"/>
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/setting_max_values"
            android:entryValues="@array/setting_max_values"
            android:key="-maxzoom-"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/setting_maxzoom"/>
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/maptype_titles"
            android:entryValues="@array/maptype_values"
            android:key="-maptype-"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/maptype_title"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/category_mapbox"
        android:key="key_category_mapbox">
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/mapbox_titles"
            android:entryValues="@array/mapbox_values"
            android:key="-mapboxtype-"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/mapbox_type_title"/>
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/mapbox_quality_titles"
            android:entryValues="@array/mapbox_quality_values"
            android:key="-mapboxquality-"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/mapbox_quality_title"/>
    </PreferenceCategory>
</PreferenceScreen>