<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CCC"
    android:fitsSystemWindows="true"
    android:scaleType="fitCenter">

    <RelativeLayout
        android:id="@+id/relativeLay1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/toolbardark"
                app:popupTheme="@style/AppTheme.PopupOverlay"/>

        </android.support.design.widget.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:background="@drawable/upload_route_box"
                android:elevation="5dp"
                android:orientation="vertical"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:paddingTop="16dp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_routeName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp">

                    <EditText
                        android:id="@+id/routename"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/route_name"
                        android:inputType="textCapSentences"/>
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/route_type"/>

                <Spinner
                    android:id="@+id/routetypes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:entries="@array/routetypes"/>

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/route_setting"/>

                <Spinner
                    android:id="@+id/routesettings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:entries="@array/routesettingtypes"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp">

                    <EditText
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/route_description"
                        android:inputType="textMultiLine"
                        />
                </android.support.design.widget.TextInputLayout>

                <CheckBox
                    android:id="@+id/privacy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/make_private"/>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/uploadBtn"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/upload_button"
                    android:padding="12dp"
                    android:text="@string/route_upload"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimaryDark"
                    />

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
</LinearLayout>