<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.myroutes.SettingsActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/toolbardark"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </android.support.design.widget.AppBarLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.myroutes.OfflineActivity"
        android:fillViewport="true">

        <TextView
            android:text="@string/generate_offline_map_mobac_instruction"
            android:textSize="18sp"
            android:layout_marginTop="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:id="@+id/textView2"/>

        <TextView
            android:text="@string/select_mbtiles_instruction"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:id="@+id/textView3"
            android:layout_below="@+id/textView2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="16dp"/>

        <Button
            android:text="@string/selection_mbtiles_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:id="@+id/selectFile"
            style="@style/Widget.AppCompat.Button.Colored"
            android:backgroundTint="@color/colorPrimary"
            android:layout_below="@+id/textView3"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/selectFile"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/filenameOfflineRoute"
            android:text=""
            android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
            android:textAlignment="center"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textStyle="normal|bold"
            android:layout_marginTop="15dp"/>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
